--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">CV Generator</string>
+    <string name="welcome_text">Hello!</string>
+    <string name="first_name">First name</string>
+    <string name="last_name">Last name</string>
+    <string name="telephone">Telephone</string>
+    <string name="email">E-mail</string>
+
+    <string-array name="social_networks">
+        <item>LinkedIn</item>
+        <item>Facebook</item>
+        <item>Github</item>
+        <item>Skype</item>
+    </string-array>
+
 </resources>
