--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,12 +10,13 @@
     <string name="birthday">Birthday</string>
     <string name="school">School</string>
     <string name="field_of_study">Field of Study</string>
-    <string name="start_date">Start Date</string>
-    <string name="end_date">End Date</string>
-    <string-array name="social_networks_array">
-        <item>LinkedIn</item>
-        <item>Facebook</item>
-        <item>Github</item>
-        <item>Skype</item>
-    </string-array>
+    <string name="start_date">Start Year</string>
+    <string name="end_date">End Year</string>
+    <string name="social_network1">LinkedIn</string>
+    <string name="social_network2">Facebook</string>
+    <string name="social_network3">Github</string>
+    <string name="social_network4">Skype</string>
+    <string name="position">Position</string>
+    <string name="company">Company</string>
+    <string name="description">Description</string>
 </resources>
