--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="birthday">Birthday</string>
     <string name="school">School</string>
     <string name="field_of_study">Field of Study</string>
+    <string name="type_of_study">Type</string>
     <string name="start_date">Start Year</string>
     <string name="end_date">End Year</string>
     <string name="social_network1">LinkedIn</string>
@@ -22,6 +23,10 @@
     <string name="skill">Skill</string>
     <string name="level">Level</string>
     <string name="cs_skills">IT Skills</string>
+    <string name="certificate_name">Name of certificate</string>
+    <string name="year">Year</string>
+    <string name="to_next_activity">Next</string>
+    <string name="add">+</string>
     <string name="createcv_title">Personal Information</string>
     <string name="education_title">Education</string>
     <string name="work_experience_title">Work Experience</string>
@@ -29,9 +34,6 @@
     <string name="it_skills_title">IT Skills</string>
     <string name="other_skills_title">Other Skills</string>
     <string name="certificates_title">Certificates</string>
-    <string name="certificate_name">Name of certificate</string>
-    <string name="year">Year</string>
-
     <string-array name="skill_levels">
         <item>Beginner</item>
         <item>Medium</item>
