--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,9 @@
 <resources>
     <string name="app_name">CV Generator</string>
+    <string name="create_cv">Create CV</string>
+    <string name="view_cv">View CV</string>
+    <string name="edit_cv">Edit CV</string>
+    <string name="tips">Tips</string>
     <string name="welcome_text">Hello!</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
